signstar-request-signature/src/ssh/snapshots/signstar_request_signature__ssh__client__tests__parsing_config_broken_key.snap
---
source: signstar-request-signature/src/ssh/client.rs
expression: error_msg
---
TOML parse error at line 5, column 19
  |
5 | user_public_key = "ssh-ed25519 broken"
  |                   ^^^^^^^^^^^^^^^^^^^^
Base64 encoding error: invalid Base64 encoding
